package com.library.user.domain.model;

/**
 * User status enumeration
 */
public enum UserStatus {
    ACTIVE,
    INACTIVE,
    SUSPENDED,
    DEACTIVATED
}
