package com.library.user.domain.valueobject;

import com.library.user.domain.service.IPasswordHasher;
import lombok.EqualsAndHashCode;
import lombok.Getter;
import lombok.ToString;

@Getter
@EqualsAndHashCode
@ToString(exclude = "value")
public class PasswordHash {

    private final String value;

    private PasswordHash(String value) {
        if (value == null || value.trim().isEmpty()) {
            throw new IllegalArgumentException("Password hash cannot be empty");
        }
        this.value = value;
    }



    public static PasswordHash createFromRaw(String rawPassword, IPasswordHasher hasher) {
        if (rawPassword == null || rawPassword.trim().isEmpty()) {
            throw new IllegalArgumentException("Raw password cannot be empty");
        }
        // Logic hash nằm ở đây
        String hashed = hasher.hash(rawPassword);
        return new PasswordHash(hashed);
    }


    public static PasswordHash of(String dbHash) {
        return new PasswordHash(dbHash);
    }

    // --- BUSINESS LOGIC: SO KHỚP ---
    // Truyền hasher vào để kiểm tra
    public boolean matches(String rawPassword, IPasswordHasher hasher) {
        return hasher.matches(rawPassword, this.value);
    }
}